--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,18 @@
     font-family: 'Prata', serif;
 }
 
+.navbar {
+    background-color: #333132;
+}
+
+.nav-link {
+    color: white;
+}
+
+.navbar-brand {
+    color: silver;
+}
+
 .leftSide, .rightSide {
     height: 50vh;
     width: 100%;
@@ -36,4 +48,9 @@
 
 .rightSide, .title {
     font-size: 30px;
+}
+
+.proPic {
+    height: 300px;
+    width: 300px;
 }
