--- a/assets/font-mfizz.css
+++ b/assets/font-mfizz.css
@@ -167,7 +167,7 @@
     text-transform: none;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-smoothing: antialiased;
+    /* font-smoothing: antialiased; */
   }
   
   .icon-3dprint:before { content: "\f100"; }
