--- a/assets/style.css
+++ b/assets/style.css
@@ -23,9 +23,8 @@
 
 .navbar-brand {
     color: palegoldenrod;
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
     font-size: 15pt;
-    padding: -3px;
 }
 
 .navbar-brand:hover {
@@ -57,7 +56,7 @@
 }
 
 .name {
-    font-size: 45px;
+    font-size: 52px;
     border-top: 5px solid white;
     border-bottom: 5px solid white;
     color: black;
@@ -65,7 +64,7 @@
 }
 
 .rightSide, .title {
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Alice', serif;
 }
 
@@ -73,20 +72,21 @@
     background-color: #333132;
     color: white;
     padding: 20px;
+    font-family: 'Alice', serif;
 }
 
 #aboutMeHeader {
     padding: 20px;
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
 }
 
 #appsHeader {
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
 }
 
 .sectionHeader {
     margin: 33px;
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
 }
 
 .proPic {
@@ -96,6 +96,7 @@
 
 .description {
     font-size: 19px;
+    font-family: 'Alice', serif;
 }
 
 .projects {
@@ -115,6 +116,7 @@
 .card-img-top {
     height: 285px;
     width: 100%;
+    /* background-position: cover; */
 }
 
 .card-header {
@@ -128,7 +130,7 @@
 }
 
 #skillsHeader {
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
     padding-top: 5px;
     padding: 30px;
 }
@@ -143,7 +145,7 @@ i {
 }
 
 #contactHeader {
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
     padding-top: 35px;
     padding-bottom: 10px;
 }
@@ -151,7 +153,7 @@ i {
 .footer {
     background-color:#333132;
     color: white;
-    font-family: 'Prata', serif;
+    font-family: 'Alice', serif;
 
 }
 
