--- a/assets/style.css
+++ b/assets/style.css
@@ -104,6 +104,14 @@
     margin-top: 10px;
     margin-bottom: 20px;
     font-family: 'Alice', serif;
+    text-align: center;
+}
+
+.sectionSubHeader {
+    margin-bottom: 40px;
+    font-family: 'Alice', serif;
+    text-align: center;
+
 }
 
 .proPic {
