--- a/assets/style.css
+++ b/assets/style.css
@@ -207,9 +207,10 @@ html {
 }
 
 .proPic {
-  height: 365px;
-  width: 365px;
-  margin-right: 35px;
+  width: 100%;
+  max-height: 600px;
+  margin: 30px;
+  background-position: no-repeat center / cover;
 }
 
 .description {
