--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,13 @@ html {
   height: 45px;
 }
 
+.navbar-dark {
+    background-color: transparent !important;
+}
+.navbar-dark.scrolled {
+    background-color: #1e1f26 !important;
+}
+
 .nav-link {
   color: white;
   font-size: 17px;
@@ -50,6 +57,7 @@ html {
   justify-content: center;
   background-color: #1e1f26;
   padding-top: 45px;
+
 }
 .app_section {
   min-height: 50vh;
@@ -60,8 +68,8 @@ html {
   background-color: #1e1f26;
 }
 .blur{
-  background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(8px);
+  background: rgba(255, 255, 255, 0.0);
+  backdrop-filter: blur(0px);
   min-height: 66vh;
   width: 100%;
 }
@@ -72,6 +80,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 .app_container {
   width: 90%;
@@ -84,18 +93,25 @@ html {
 .left {
   width: 50%;
   height: 500px;
-  background: url("./images/Athens_sunset.jpeg") no-repeat center / cover;
-  margin-right: -20px;
+  /* background: url("./images/Athens_sunset.jpeg") no-repeat center / cover; */
+  margin-right: -120px;
+  border-style: solid;
+  border-color: #303137;
+  border-color: white;
+  border-width: 15px;
+  background: rgba(255, 255, 255, 0.0);
+  backdrop-filter: blur(5px);
+
 }
 .rightBackground{
-  width: 43%;
-  min-height: 300px;
+  width: 15%;
+  min-height: 250px;
   background-color: #ffdc4e;
   display: flex;
   align-items: center;
   padding: 30px;
-  margin-top: 84px;
-  margin-left: -385px;
+  margin-top: -150px;
+  margin-left: -100px;
   z-index: 0;
 }
 .right {
@@ -105,9 +121,9 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 30px;
+  padding: 15px 30px;
   color: white;
-  margin-left: -150px;
+  margin-left: 45px;
   z-index: 1;
 }
 .right h1 {
@@ -165,7 +181,7 @@ html {
 
 .ocean_background {
   background: url("./images/ocean-birdseye.jpg") no-repeat center / cover;
-  filter: brightness(80%)
+  filter: brightness(95%)
 }
 
 .calm_ocean_background {
@@ -190,11 +206,14 @@ html {
   padding: 40px;
 }
 
-.whiteText {
+.lightBlueSection {
+    background-color: #185366;
     color: white;
-    /* background-color:rgba(48, 49, 54, 1); */
     padding: 40px;
-    
+}
+
+.whiteText {
+    color: white;    
 }
 
 .sectionHeader {
@@ -229,6 +248,7 @@ html {
   margin-bottom: 30px;
   max-width: 450px;
   height: 520px;
+  color: black;
 }
 
 .card-img-top {
