--- a/assets/style.css
+++ b/assets/style.css
@@ -224,8 +224,9 @@ html {
 }
 
 .proPic {
+  min-height: 40vh;
   width: 100%;
-  max-height: 600px;
+  display: flex;
   margin: 30px;
   background-position: no-repeat center / cover;
 }
