--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ html {
 }
 .app_container {
   margin-top: 40px;
-  margin-bottom: 0px;
+  margin-bottom: 2 0px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -219,7 +219,7 @@ html {
 .card {
   margin-bottom: 30px;
   min-width: 300px;
-  max-width: 350px;
+  max-width: 425px;
   /* height: 520px; */
   color: black;
 }
@@ -234,6 +234,11 @@ html {
 
 .card-img-top {
   height: 200px;
+  background-position: no-repeat center / cover;
+}
+
+.card-img-side {
+  height: 250px;
   background-position: no-repeat center / cover;
 }
 
