--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
+@import url(https://fonts.googleapis.com/css?family=Khula:700);
 
 * {
   padding: 0;
@@ -34,101 +35,11 @@ html {
 .nav-link {
   color: white;
   font-size: 17px;
-  margin-left: 13px;
+  margin-left: 15px;
 }
 
 .navbar-brand {
   font-size: 18pt;
-}
-
-.top_section {
-  min-height: 50vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 45px;
-}
-.app_section {
-  /* min-height: 50vh; */
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.blur {
-  background: rgba(255, 255, 255, 0);
-  backdrop-filter: blur(0px);
-  min-height: 66vh;
-  width: 100%;
-}
-.top_container {
-  width: 90%;
-  max-width: 1000px;
-  margin: 50px auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.app_container {
-  margin-top: 40px;
-  margin-bottom: 2 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.left {
-  width: 50%;
-  height: 500px;
-  /* background: url("./images/Athens_sunset.jpeg") no-repeat center / cover; */
-  margin-right: -120px;
-  border-style: solid;
-  border-color: #303137;
-  border-color: white;
-  border-width: 15px;
-  background: rgba(255, 255, 255, 0);
-  /* backdrop-filter: blur(5px); */
-}
-.rightBackground {
-  width: 15%;
-  min-height: 250px;
-  background-color: #ffdc4e;
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  margin-top: -150px;
-  margin-left: -100px;
-  z-index: 0;
-}
-.right {
-  width: 50%;
-  min-height: 300px;
-  background-color: #303137;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 15px 30px;
-  color: white;
-  margin-left: 45px;
-  z-index: 1;
-}
-.right h1 {
-  font-size: 40px;
-  font-weight: lighter;
-}
-.right p {
-  margin: 20px 0;
-  font-weight: 500;
-  line-height: 25px;
-}
-.right a {
-  text-decoration: none;
-  text-transform: uppercase;
-  background-color: white;
-  color: black;
-  padding: 20px 30px;
-  display: inline-block;
-  letter-spacing: 2px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -136,59 +47,87 @@ html {
     height: 60px;
     margin-bottom: 65px;
   }
-  .name_container {
-    flex-direction: column;
-    width: 100%;
-    margin: 20px 20px;
-  }
-  .left {
-    width: 100%;
-    height: 400px;
-    z-index: 1;
-  }
-  .right {
-    width: 100%;
-    margin: 0;
-    z-index: 2;
-  }
-  .rightBackground {
-    width: 15%;
-    margin: 0;
-    z-index: 0;
-    height: 150px;
-  }
 }
 
-.sunset_background {
-  background: url("./images/Athens_sunset.jpeg") no-repeat center / cover;
+.top_section {
+  min-height: 60vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+
+.hidden {
+  opacity: 0;
+}
+.console_section {
+  min-height: 70vh;
+  background-color: #1e1f26;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 100px;
+}
+.console-container {
+  font-family: Khula;
+  font-size: 4.5em;
+  text-align: center;
+  height: 200px;
+  width: 600px;
+  display: block;
+  color: white;
+}
+.console-underscore {
+  display: inline-block;
+  position: relative;
+  top: -0.1em;
+  left: 10px;
+}
+
+.app_section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .app_container {
+  margin-top: 40px;
+  margin-bottom: 2 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
 .purpleSection {
   background-color: #5f7590;
   color: black;
-  padding: 40px;
+  padding: 60px;
 }
 
 .blackSection {
   background-color: #1e1f26;
   color: white;
-  padding: 40px;
+  padding: 60px;
 }
 
 .whiteSection {
   background-color: white;
   color: black;
-  padding: 40px;
+  padding: 60px;
 }
 
-.lightBlueSection {
-  background-color: #185366;
-  color: white;
-  padding: 40px;
+.sunsetSection {
+  background-image: linear-gradient(#9397a1, #efb989);
+  color: black;
+  padding: 60px;
 }
 
-.whiteText {
-  color: white;
+
+.mainSectionHeader {
+  padding-top: 5px;
+  padding: 30px;
 }
 
 .sectionHeader {
@@ -219,7 +158,6 @@ html {
   margin-bottom: 30px;
   min-width: 300px;
   max-width: 425px;
-  /* height: 520px; */
   color: black;
 }
 
@@ -227,7 +165,6 @@ html {
   margin-bottom: 30px;
   min-width: 300px;
   max-width: 400px;
-  /* height: 520px; */
   color: black;
 }
 
@@ -250,10 +187,7 @@ html {
   padding: -5px;
 }
 
-#skillsHeader {
-  padding-top: 5px;
-  padding: 30px;
-}
+
 
 i {
   padding: 10px 0px 10px 0px;
