--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,8 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: linear-gradient(#1e1f26, #46344e);
+  color: white;
 }
 
 .hidden {
@@ -77,12 +79,15 @@ html {
   display: block;
   color: white;
   padding-top: 40px;
+    color: #ffee10;
+
 }
 .console-underscore {
   display: inline-block;
   position: relative;
   top: -0.1em;
   left: 10px;
+  color: #ffee10;
 }
 
 .app_section {
@@ -92,29 +97,38 @@ html {
   justify-content: center;
 }
 
-.purpleSection {
-  background-color: #5f7590;
-  color: black;
-  padding: 60px;
-}
-
 .blackSection {
   background-color: #1e1f26;
   color: white;
   padding: 60px;
 }
 
-.whiteSection {
-  background-color: white;
-  color: black;
+.purpleSection {
+  background-color: #46344e;
+  color: white;
   padding: 60px;
 }
 
-.sunsetSection {
-  background-image: linear-gradient(-45deg, #46344e, #f2f2f2);
-  background-size: 180% 180%;
-  color: black;
+.mediumPurpleSection {
+  /* background-image: linear-gradient(-45deg, #f2f2f2, #65576c, #f2f2f2); */
+  background-color: #65576c;
+  background-size: 120% 120%;
+  color: white;
   padding: 60px;
+}
+
+.blackToPurpleSection {
+    background-image: linear-gradient(#1e1f26, #46344e);
+      color: white;
+  padding: 60px;
+
+}
+
+.purpleToBlackSection {
+    background-image: linear-gradient( #46344e, #1e1f26);
+      color: white;
+  padding: 60px;
+
 }
 
 .mainSectionHeader {
@@ -216,25 +230,6 @@ img:hover {
 
 .footer {
   padding: 2px;
-}
-
-.animatedBackground {
-  background: linear-gradient(-45deg, #46344e, #f2f2f2);
-  background-size: 200% 200%;
-  animation: gradient 20s ease infinite;
-  padding: 50px;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
+  background-color: #46344e;
+  color: white
 }
