--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 .navbar {
-  background-color: #1e1f26;
+  background-color: #435e82;
   font-size: 11pt;
   padding-left: 22px;
   position: fixed;
@@ -29,7 +29,7 @@ html {
 }
 
 .navbar-dark.scrolled {
-  background-color: #1e1f26 !important;
+  background-color: #435e82 !important;
 }
 
 .nav-link {
@@ -55,7 +55,8 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(#1e1f26, #46344e);
+  background-color: #6a7f99;
+  /* background-image: linear-gradient(#24305E, #374785); */
   color: white;
 }
 
@@ -63,8 +64,9 @@ html {
   opacity: 0;
 }
 .console_section {
-  min-height: 85vh;
-  background-color: #1e1f26;
+  min-height: 82vh;
+  /* background-color: #435e82; */
+  background: url(./images/Athens_sunset.jpeg) no-repeat center top ;
   width: 100%;
   display: flex;
   align-items: center;
@@ -79,14 +81,16 @@ html {
   display: block;
   color: white;
   padding-top: 40px;
-  color: #ffee10;
 }
 .console-underscore {
   display: inline-block;
   position: relative;
   top: -0.1em;
   left: 10px;
-  color: #ffee10;
+}
+
+.headshot {
+  border-radius: 50%
 }
 
 .app_section {
@@ -97,13 +101,13 @@ html {
 }
 
 .blackSection {
-  background-color: #1e1f26;
+  background-color: #435e82;
   color: white;
   padding: 60px;
 }
 
 .purpleSection {
-  background-color: #46344e;
+  background-color: #6a7f99;
   color: white;
   padding: 60px;
 }
@@ -116,13 +120,13 @@ html {
 }
 
 .blackToPurpleSection {
-  background-image: linear-gradient(#1e1f26, #46344e);
+  background-image: linear-gradient(#435e82, #6a7f99);
   color: white;
   padding: 60px;
 }
 
 .purpleToBlackSection {
-  background-image: linear-gradient(#46344e, #1e1f26);
+  background-image: linear-gradient(#6a7f99, #435e82);
   color: white;
   padding: 60px;
 }
@@ -194,7 +198,7 @@ i {
   text-align: center;
   line-height: 63px;
   border-radius: 50%;
-  color: #666;
+  color: #f2f2f2;
   transition: 0.5s;
 }
 
@@ -203,9 +207,9 @@ i:hover {
 }
 
 .icon_img {
-  background-color: #666;
-  color: #666;
-  margin-bottom: 20px;
+  background-color: #f2f2f2;
+  color: #f2f2f2;
+  margin-bottom: 17px;
   border-radius: 0%;
   transition: 0.5s;
 }
@@ -221,6 +225,4 @@ img:hover {
 
 .footer {
   padding: 2px;
-  background-color: #46344e;
-  color: white;
 }
