--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,7 @@ html {
 }
 
 .top_section {
+  padding-top: 75vh;
   min-height: 50vh;
   width: 100%;
   display: flex;
@@ -64,13 +65,15 @@ html {
   opacity: 0;
 }
 .console_section {
-  min-height: 82vh;
+  min-height: 70vh;
   /* background-color: #435e82; */
-  background: url(./images/Athens_sunset.jpeg) no-repeat center top ;
+  /* background: url(./images/Athens_sunset.jpeg) no-repeat center top ; */
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  top: 40;
 }
 .console-container {
   font-family: Khula;
