--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html {
   position: fixed;
   z-index: 350;
   width: 100%;
-  height: 45px;
+  height: 49px;
 }
 
 .navbar-dark {
@@ -34,12 +34,12 @@ html {
 
 .nav-link {
   color: white;
-  font-size: 17px;
+  font-size: 19px;
   margin-left: 15px;
 }
 
 .navbar-brand {
-  font-size: 18pt;
+  font-size: 20pt;
 }
 
 @media only screen and (max-width: 768px) {
@@ -153,6 +153,11 @@ html {
   justify-content: center;
 }
 
+.athensSection {
+background: url("../assets/images/Athens_sunset.jpeg") no-repeat top / cover;
+color: white;
+
+}
 .blackSection {
   background-color: #435e82;
   color: white;
@@ -197,6 +202,7 @@ html {
 .sectionSubHeader {
   margin-bottom: 40px;
 }
+
 
 .avatar {
   vertical-align: middle;
@@ -285,3 +291,6 @@ i {
 .footer {
   padding: 2px;
 }
+
+/* Contrasting Yellow: #ffd700 */
+/* Contrasting Orange:  #ff7f50 */
