--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,6 @@ color: #303330;
   align-items: center;
   justify-content: center;
   background-color: #6a7f99;
-  color: white;
   padding-top: 60px;
   padding-left: 60px;
   padding-right: 60px;
@@ -74,7 +73,7 @@ color: #303330;
 
 
 .console_section {
-  height: 100vh;
+  height: 60vh;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -82,17 +81,16 @@ color: #303330;
 }
 
 .name-row {
-  height: 32vh;
+  height: 25vh;
   font-size: 3.5em;
 }
 
 .console-container {
   font-family: Khula;
-  font-size: 2.5em;
+  font-size: 2.4em;
   text-align: center;
   height: 8vh;
-  color: white;
-;
+  color: #303330;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -139,7 +137,7 @@ color: #303330;
 .client-container {
   position: relative;
   text-align: center;
-  min-height: 250px;
+  min-height: 280px;
 }
 
 .client-text {
