--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,9 @@ section {
 .card {
   overflow: hidden; /* Prevents any overflow from the card */
   max-width: 560px;
-  max-height: 388px;
+  /* max-height: 400px; */
   border-radius: 0%;
-  margin-bottom: 2.5rem;
+  margin-bottom: 3.2rem;
 }
 
 .position-relative {
@@ -255,6 +255,7 @@ section {
   align-items: center; /* Vertically center */
   justify-content: center; /* Horizontally center */
   text-align: center; /* Center text */
+  padding: 0rem 1rem;
 }
 
 .position-relative:hover .overlay {
